@@ -2,6 +2,7 @@ OpenLDAP 2.3 Change Log
 
 OpenLDAP 2.3.20 Engineering
 	Added libldap SASL workaround for broken LDAP servers (ITS#4391)
+	Fixed libldap/slapd valuesReturnFilter OID (ITS#4404)
 	Fixed slapd config_generic_wrapper missing parameter bug (ITS#4376)
 	Fixed slapd extensible filter value normalization bug (ITS#4380)
 	Fixed slapd context CSN not updating issue (ITS#4384)
